<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProjectFuture Browser</string>
    <string name="address_hint">Search or type a URL</string>
    <string name="action_go">Go</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_reload">Reload</string>
    <string name="action_tabs">Open tabs</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_close">Close</string>
    <string name="tabs_dialog_title">Tabs</string>
    <string name="untitled_tab">New tab</string>
    <string name="loading">Loading…</string>
    <string name="error_load_failed">Couldn\'t load %1$s: %2$s</string>
    <string name="action_menu">More options</string>
    <string name="menu_add_bookmark">Bookmark this page</string>
    <string name="menu_remove_bookmark">Remove bookmark</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_history">History</string>
    <string name="bookmarks_dialog_title">Bookmarks</string>
    <string name="history_dialog_title">History</string>
    <string name="action_clear">Clear all</string>
    <string name="bookmarks_empty">No bookmarks yet</string>
    <string name="history_empty">No history yet</string>
    <string name="bookmark_added">Bookmarked</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="menu_find_in_page">Find in page</string>
    <string name="find_in_page_hint">Find in page</string>
    <string name="find_previous">Previous match</string>
    <string name="find_next">Next match</string>
    <string name="find_close">Close find bar</string>
    <string name="menu_share">Share</string>
    <string name="menu_desktop_site">Desktop site</string>
    <string name="download_started">Downloading %1$s</string>
    <string name="download_failed">Couldn\'t start download</string>
    <string name="menu_dark_mode">Dark mode</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_home_page">Home page</string>
    <string name="settings_search_template">Search engine URL (%s = query)</string>
    <string name="action_save">Save</string>
    <string name="menu_print">Print</string>
    <string name="menu_reader_mode">Reader mode</string>
    <string name="menu_tracking_protection">Tracking protection</string>
    <string name="menu_new_private_tab">New private tab</string>
    <string name="private_tab_title_prefix">(Private) %1$s</string>
    <string name="certificate_error_title">Your connection is not private</string>
    <string name="certificate_error_message">%1$s\'s certificate could not be verified: %2$s\n\nProceeding will trust this site\'s certificate for the rest of this session.</string>
    <string name="certificate_error_proceed">Proceed anyway</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="add_to_home_screen_unsupported">Add to Home screen isn\'t supported on this version of Android</string>
    <string name="save_password_title">Save password?</string>
    <string name="save_password_message">Save this password for %1$s in ProjectFuture Browser\'s encrypted password manager?</string>
    <string name="save_password_save">Save</string>
    <string name="save_password_never">Never for this site</string>
    <string name="autofill_login_title">Sign in?</string>
    <string name="autofill_login_message">Fill in your saved %1$s login for %2$s?</string>
    <string name="autofill_login_fill">Fill in</string>
    <string name="menu_passwords">Saved passwords</string>
    <string name="passwords_dialog_title">Saved passwords</string>
    <string name="passwords_empty">No saved passwords yet</string>
    <string name="password_deleted">Password removed</string>
    <string name="menu_sandboxed_tabs">Sandboxed tabs</string>
    <string name="menu_copy_logs">Copy logs</string>
    <string name="logs_copied">Logs copied (%1$d lines)</string>
</resources>
